Changed how the external tools are invoked.